# Fastapi-DDD-chat

./: .env.example  Makefile  README.md  pyproject.toml
app/: kafka_test_consumer.py  kafka_test_producer.py  main.py
app/application/api/: lifespan.py  main.py  schemas.py
app/application/api/common/websockets/: managers.py  managers.py~
app/application/api/messages/: filters.py  handlers.py  schemas.py
app/application/api/messages/websockets/: messages.py  messages.py~
app/application/api/websockets/: messages.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: messages.py
app/domain/value_objects/: base.py  messages.py
app/infrastructure/message_brokers/: base.py  kafka.py
app/infrastructure/repositories/: messages.py
app/infrastructure/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: messages.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/mediator/: base.py  event.py  query.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/value_objects/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml  messaging.yaml  storages.yaml
