[tool.poetry]
name = "fastapi-chat-ddd"
version = "0.1.0"
description = ""
authors = ["Nazar <nazarfilonyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
