[tool.poetry]
name = "fastapi-chat-ddd"
version = "0.1.0"
description = ""
authors = ["Nazar <nazarfilonyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
motor = "^3.5.1"
uvicorn = {extras = ["all"], version = "^0.30.6"}
ipython = "^8.27.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
faker = "^28.4.1"
punq = "^0.7.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
